# EchoMind

./: .gitignore
server/: .env.example  .gitignore  docker-compose.yml  postgres.schema  pyproject.toml
server/App/: config.py  main.py
server/App/Databases/: postgres_db.py  qdrant_db.py
server/App/Services/: media_processing_service.py
server/App/clients/: ffmpeg_client.py  ytdlp_client.py
server/App/core/: logging_config.py
server/App/utils/: audio_util.py
server/app/: main.py
server/app/clients/: llm_client.py  qdrant_client.py  whisper_client.py
server/app/databases/: redis_db.py
server/app/models/: __init__.py  models.py
server/app/routes/: auth_route.py  auth_router.py  chat_router.py  conversations_router.py
server/app/schemas/: auth_schema.py
server/app/services/: media_processing_service.py
server/app/utils/: file_util.py  pdf_util.py
server/migrations/: env.py
server/migrations/versions/: 490ea4e2dd20_initial_tables.py
